variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:5: error: value update is not a member of Boolean
  if (estSurOrange()=true) {
      ^RunHalf:8: error: not found: value estSurBuscuit
  if (estSurBuscuit()=true) {
      ^