variables.RunHalf.scala.code
var nOr=0
var nBi=0
while (2*nBi != nOr +1) {
  avance()
  if (estSurOrange()=true) {
    nOr = nOr+1
    }
  if (estSurBuscuit()=true) {
    nBi= nBi+1
  }
}